0.90_dev
-update matrix reset to turn off edit mode.
-add icon for the system display.
-update for py3 compatibility.
